# dlib_darknet

./: CMakeLists.txt  README.md  dark.c  dark.h  dlib_nap_project.cpp
cfg/: eye.cfg  eye.data
data/: eye_1000.weights  labels.txt
